--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-certifi==2023.11.17
-charset-normalizer==3.3.2
-idna==3.6
+click==8.1.7
 iniconfig==2.0.0
+joblib==1.3.2
+nltk==3.8.1
 packaging==23.2
-pluggy==1.3.0
-pytest==7.4.4
-urllib3==2.1.0
+pluggy==1.4.0
+pytest==8.0.0
+regex==2023.12.25
+tqdm==4.66.1
